--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "none"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,9 @@
   "author": "prasad",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.2",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
