--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "prasad",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
